# HPE-Nvidia-Vista-3D

./: .dockerignore  .env.backup  .gitignore  CACHE_VERIFICATION_SUMMARY.md  CACHING_SOLUTION_SUMMARY.md  CHANGES.md  CHECK_SETUP.md  COMMIT_MESSAGE.txt  DOCKER_BUILD_GUIDE.md  DOCKER_COMPOSE_FIX.md  Dockerfile  Dockerfile.backend  GPU_TEST_COMMANDS.md  Image_Data.py  K8S_DEPLOYMENT_CHECKLIST.md  K8S_READINESS_SUMMARY.md  MONAI.py  NVIDIA_DOCKER_TROUBLESHOOTING.md  NiiVue.py  NiiVue_Viewer.py  Open3d_Viewer.py  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_setup.py  REMOTE_SERVER_SETUP.md  REMOTE_SETUP_QUICK_START.md  SETUP.md  SETUP_CONSOLIDATION.md  SETUP_FIXES_SUMMARY.md  SETUP_SUMMARY.md  Tools.py  UBUNTU_SERVER_INSTRUCTIONS.md  app.py  build-and-push.sh  build_and_push_docker.sh  cache.py  check_nifti.py  check_nifti_header.py  (+46 more)
.streamlit/: config.toml
SER00001/: I00001  I00002  I00003
assets/: hpe_badge.py  navigation.py  niivue_badge.py  niivue_viewer.html  niivue_viewer_backup.html  niivue_viewer_minimal.html  nvidia_badge.py  z_script.js
backend/: docker-compose.yml  login_ngc.sh  setup.py  setup_backend.py  setup_backend_remote.py
conf/: colormap_order.json  image_server_conf.json  label_colors.json  label_colors.json-DULL  navigation_config.json  vista3d_label_colors.json  vista3d_label_colors.json.backup  vista3d_label_colors.json.bakup.works  vista3d_label_dict.json  vista3d_label_sets.json  vista3d_workflow.mmd
conf.bak/: vista3d_label_colors.json.green
docs/: ANALYZE_SERVER_DATA.md  BACKEND_GUIDE.md  COLORMAPS.md  CONTAINERIZATION.md  CT_VISUALIZATION_GUIDE.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MODES.md  DEVELOPMENT_ENVIRONMENTS.md  DICOM2NIFTI.md  DOCKER_BUILD.md  ENHANCED_REALISTIC_VOXEL_EFFECTS.md  EXTERNAL_DIRECTORIES.md  FRONTEND_GUIDE.md  HELM.md  IMAGE_CACHING.md  IMAGE_SERVER.md  KEY_TERMS.md  NIFTI.md  NIFTI2PLY.md  NIIVUE_VIEWER.md  OBJ_VIEWER_GUIDE.md  OBJ_VIEWER_README.md  OPEN3D_VIEWER.md  README_setup.md  REALISTIC_VOXEL_EFFECTS.md  REMOTE_BACKEND_SETUP.md  SAMPLE_DATA.md  SETUP_GUIDE.md  SETUP_GUIDE_NEEDS_UPDATE.md  SETUP_OPTIONS.md  SETUP_SCRIPTS.md  SETUP_VISTA3D_SERVER.md  SSH_TUNNEL_GUIDE.md  START_GUI.md  TECHXperience.md  VISTA3D.md  (+3 more)
frontend/: .dockerignore  .env.bak  Dockerfile  Image_Data.py  NiiVue_Viewer.py  OBJ_VIEWER_README.md  OBJ_Viewer.py  Tools.py  app.py  docker-compose.yml  logs_frontend.sh  pyproject.toml  quick_test.sh  requirements.txt  setup.py  setup_frontend.py  setup_frontend_local.py  start_all.sh  start_frontend.sh  start_image_server.sh  stop_frontend.sh  test_connectivity.py  test_connectivity.sh
frontend/.streamlit/: config.toml
frontend/assets/: hpe_badge.py  niivue_viewer.html  vista3d_workflow.mmd
frontend/assets/colormaps/: README.md  arteries.json  blues.json  bones.json  bones_only.json  brain_tissue.json  brain_vessels_eyes.json  bright_blues.json  cardiac_tissue.json  contrast_enhanced.json  cool.json  ct_angiography.json  ct_artery.json  ct_bones.json  ct_vessels.json  distinct_anatomy.json  gray.json  hot.json  hsv.json  inferno.json  jet.json  kidney_tissue.json  linspecer.json  liver_tissue.json  lung_tissue.json  magma.json  medical_specific.json  muscles.json  niivue-autumn.json  niivue-ct_bones.json  niivue-ct_liver.json  niivue-ct_metallic.json  niivue-ct_translucent.json  niivue-gray.json  niivue-hot.json  niivue-hsv.json  niivue-spring.json  niivue-turbo.json  niivue-winter.json  organs.json  (+13 more)
frontend/assets/colormaps.old/: ct_cardiac.json  ct_muscles.json  ct_soft.json  ct_soft_tissue.json  ct_vessels.json  fixed_anatomy.json  hot.json  inferno.json  magma.json  niivue-bone.json  niivue-ct_metallic.json  niivue-ct_muscles.json  niivue-ct_soft.json  niivue-ct_soft_tissue.json  niivue-ct_translucent.json  niivue-linspecer.json  niivue-viridis.json  parula.json  plasma.json  rainbow.json  viridis.json
frontend/assets/colormaps.old/backup_original/: brain_vessels_eyes.json  bright_blues.json  clear_anatomy.json  colormap_index.json  ct_kidneys.json  ct_liver.json  ct_scalp.json  ct_skull.json  ct_w_contrast.json  enhanced_brain_anatomy.json  gray.json  gray_translucent.json  hsv.json  linspecer.json  mri_brain_clear.json  niivue-batlow.json  niivue-blues.json  niivue-cividis.json  niivue-cool.json  niivue-copper.json  niivue-ct_air.json  niivue-ct_artery.json  niivue-ct_brain.json  niivue-ct_brain_metallic.json  niivue-ct_enhanced.json  niivue-ct_kidneys.json  niivue-ct_lung.json  niivue-ct_scalp.json  niivue-ct_skull.json  niivue-ct_vessels.json  niivue-ct_w_contrast.json  niivue-cubehelix.json  niivue-inferno.json  niivue-jet.json  niivue-magma.json  niivue-mri_brain_metallic.json  niivue-parula.json  niivue-plasma.json  niivue-rainbow.json  niivue-summer.json  (+2 more)
frontend/conf/: colormap_order.json  navigation_config.json  niivue_3d_render_config.json  vista3d_label_colors.json  vista3d_label_dict.json  vista3d_label_sets.json  voxel_effects.json
frontend/utils/: MONAI_REFACTORING_SUMMARY.md  OBJ_ANALYZER_QUICK_START.md  OBJ_ANALYZER_README.md  analyze_server_data.py  constants.py  data_manager.py  debug_voxel_effects.py  demo_enhanced_realistic_effects.py  dicom2nifti.py  enhanced_realistic_medical.py  image_server.py  medical_processing_examples.py  mermaid.py  migrate_flatten_voxels.py  monai_postprocess.py  navigation.py  nifti2obj.py  nifti2openusd.py  nifti2ply.py  obj_analyzer.py  obj_analyzer_example.py  realistic_medical_postprocessor.py  run_realistic_medical_processing.py  segment.py  server_status.py  smooth_voxels.py  template_renderer.py  test_enhanced_realistic_effects.py  test_realistic_medical.py  test_realistic_voxels.py  test_voxel_effects_detection.py  vessel_enhancement.py  viewer_config.py  vista3d_color_validator.py  vista3d_label_preserver.py  voxel2obj.py  voxel_color_mapping.py  voxel_effects.py  voxel_manager.py  voxel_manager_updated.py
image_server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  server.py  setup_image_server.py
image_server/conf/: image_server_conf.json
(+185 files in other folders)
