[project]
name = "nv"
version = "0.1.0"
description = "HPE NVIDA Vista3D Segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "nibabel>=5.3.2",
    "numpy>=2.0.0",
    "tqdm>=4.67.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "streamlit>=1.32.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "streamlit-mermaid>=0.3.0",
]
