[project]
name = "nv"
version = "0.1.0"
description = "HPE NVIDA Vista3D Segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "nibabel>=5.3.2",
    "numpy>=2.0.0",
    "tqdm>=4.67.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "streamlit>=1.32.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "streamlit-mermaid>=0.3.0",
    "dcm2niix>=1.0.20250506",
    "vtk>=9.5.1",
    "trimesh>=4.8.1",
    "pymeshfix>=0.17.1",
    "open3d>=0.19.0",
    "stl>=0.0.3",
    "extra-streamlit-components>=0.1.81",
    "scikit-image>=0.25.2",
    "plyfile>=1.1.2",
]
