[project]
name = "vista3d-frontend"
version = "0.1.0"
description = "Streamlit frontend for Vista3D"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "streamlit>=1.32.0",
    "extra-streamlit-components>=0.1.81",
    "streamlit-mermaid>=0.3.0",
    # HTTP and web requests
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # Data processing and analysis
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    # Visualization and plotting
    "plotly>=5.0.0",
    # Medical imaging
    "nibabel>=5.1.0",
    "scikit-image>=0.21.0",
    "dcm2niix>=1.0.0",
    # Progress bars and utilities
    "tqdm>=4.66.0",
    # Template rendering
    "jinja2>=3.1.0",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    # Note: usd-core moved to optional dependencies due to ARM64 platform compatibility issues
    # Install with: pip install "usd-core>=25.8" if needed for OpenUSD functionality
]

[project.optional-dependencies]
# Optional dependencies for advanced 3D processing
usd = [
    "usd-core>=25.8",
]

# Note: Platform-specific dependency handling is managed through optional dependencies
# usd-core only supports x86_64 platforms, not ARM64 Linux


